fix overflow

--- a/style.css
+++ b/style.css
@@ -50,12 +50,13 @@ body, html{
     background-color: wheat;
     overflow-x: hidden;
     box-shadow: 0.4rem 0.4rem 0.3rem 0.2rem rgba(0, 0, 0, 0.466);
+    width: 21rem;
 }   
 
 /* calculator screen */
 .calculator .screen{
     display: flex;
-    padding-right: 0.5rem;
+    padding: 0 0.5rem;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -63,10 +64,10 @@ body, html{
     font-weight: 500;
     background-color: rgb(43, 59, 43);
     height: 8rem;  
-    margin: 1.5rem;
+    margin: 2rem;
     color: beige;
     max-width: 340px;
-    overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
     box-shadow: inset 0.4rem 0.4rem 0.3rem 0.2rem rgba(0, 0, 0, 0.4);
 }
@@ -92,12 +93,12 @@ body, html{
     justify-content: center;
     background-color: #333;
     border: none;
-    box-shadow: inset 0 0 0.5rem 0.4rem rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 0 0.5rem 0.4rem #1d1d1d;
     padding: 1em;
-    width: 4rem;
-    height: 4rem;
+    width: 4.5rem;
+    height: 4.5rem;
     border-radius: 0.8rem;
-    margin: 0.4rem;
+    margin: 0.3rem;
     font-weight: 700;
     font-size: 1.4rem;
     color: beige;
@@ -109,12 +110,15 @@ body, html{
 
 .calculator .keypad .clear-btn{
     background-color: rgba(255, 0, 0, 0.842);
+    box-shadow: inset 0 0 0.5rem 0.4rem rgba(0, 0, 0, 0.4);
 }
 
 .calculator .keypad .operator-btn, .calculator .keypad #percentage{
     background-color: orange;
+    box-shadow: inset 0 0 0.5rem 0.4rem rgba(0, 0, 0, 0.4);
 }
 
 .calculator .keypad #equals{
     background-color: green;
+    box-shadow: inset 0 0 0.5rem 0.4rem rgba(0, 0, 0, 0.4);
 }
